# SwiftRemit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_NOTES.md  ISSUE_262_XSS_SANITIZATION.md  ISSUE_560_FIX_SUMMARY.md  ISSUE_561_RESOLUTION.md  MIGRATION.md  OPENAPI_DOCUMENTATION.md  OPENAPI_IMPLEMENTATION_SUMMARY.md  OPENAPI_TEST_RESULTS.md  PROPERTY_BASED_TESTS.md  PROPERTY_TESTS_CHECKLIST.md  PROPERTY_TESTS_IMPLEMENTATION_SUMMARY.md  PROPERTY_TESTS_INDEX.md  PR_DESCRIPTION_261.md  PR_DESCRIPTION_442.md  README.md  REMITTANCE_WEBHOOK_REFERENCE.md  STATE_MACHINE_TESTING_GUIDE.md  SendMoneyFlow.tsx  WEBHOOK_ACCEPTANCE_VERIFICATION.md  WEBHOOK_IMPLEMENTATION_GUIDE.md  health-check-demo.js  stellar-wallets-kit-react-integration-guide.md  test-openapi.js
api/: openapi.yaml  package-lock.json  package.json
backend/: .env.example  FX_RATE_STORAGE.md  README.md  generate-openapi.js  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml
benches/: README.md  abuse_protection.rs  batch_expiry.rs  fee_calculation.rs  settlement_storage.rs
frontend/: package-lock.json  package.json  vercel.json  vite.config.js
sdk/: README.md
src/: abuse_protection.rs  circuit_breaker.rs  circuit_breaker_storage.rs  config.rs  contract_upgrade.rs  error_handler.rs  errors.rs  events.rs  fee_calculation_standalone_tests.rs  fee_management.rs  fee_service.rs  fee_service_property_tests.rs  governance.rs  health.rs  health_test.rs  lib.rs  migration.rs  netting.rs  rate_limit.rs  storage.rs  test.rs  test_agent_migration.rs  test_agent_stats.rs  test_roles.rs  (+20 more)
(+135 files in other folders)
